--- a/index.html
+++ b/index.html
@@ -7,6 +7,34 @@
     <title>Document</title>
 </head>
 <body>
+    <header>
+        <img src="./images/Logo (1).svg" alt="/">
+
+        <nav>
+            <ul>
+                <li><a href="">Studio</a></li>
+                <li><a href="">Portfolio</a></li>
+                <li><a href="">Contacts</a></li>
+            </ul>
+        </nav>
+        
+        <ul>
+            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            <li><a href="tel:+11 (000) 111-11-11">+11 (000) 111-11-11</a></li>
+        </ul>
+
+
+    </header>
+
+    <main>
+
+        <section>
+            <h1>Effective Solutions for Your Business</h1>
+            <a href="">Order Service</a>
+        </section>
+
+    </main>
+    <footer></footer>
     
 </body>
 </html>
