--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Web Studio</title>
 </head>
 <body>
     <header>
-        <img src="./images/Logo (1).svg" alt="/">
+        <img src="./images/Logo (1).svg" alt="logotype">
 
         <nav>
             <ul>
@@ -56,8 +56,54 @@
             </ul>
         </section>
 
+        <section>
+            <h3>What are we doing</h3>
+            <ul>
+                <li>
+                    <img src="/images/img.svg" alt="First app" width="360" height="300">
+                </li>
+                <li>
+                    <img src="/images/img (1).svg" alt="Second app" width="360" height="300">
+                </li>
+                <li>
+                    <img src="/images/img (2).svg" alt="Third app" width="360" height="300">
+                </li>
+            </ul>
+        </section>
+
+        <section>
+            <h3>Our Team</h3>
+            <ul>
+                <li>
+                    <img src="/images/img (3).svg" alt="Mark Guerrero">
+                    <p>Mark Guerrero</p>
+                    <p>Product Designer</p>
+                </li>
+                <li>
+                    <img src="/images/img (4).svg" alt="Tom Ford">
+                    <p>Tom Ford</p>
+                    <p>Frontend Developer</p>
+                </li>
+                <li>
+                    <img src="/images/img (5).svg" alt="Camila Garcia">
+                    <p>Camila Garcia</p>
+                    <p>Marketing</p>
+                </li>
+                <li>
+                    <img src="/images/img (6).svg" alt="Daniel Wilson">
+                    <p>Daniel Wilson</p>
+                    <p>UI Designer</p>
+                </li>
+
+
+
+            </ul>
+        </section>
+
     </main>
-    <footer></footer>
+    <footer>
+        
+    </footer>
     
 </body>
 </html>
