--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <img src="./images/Logo (1).svg" alt="logotype">
+        <img src="/images/Logo.jpg" alt="logotype" width="115" height="24">
 
         <nav>
             <ul>
@@ -30,7 +30,7 @@
 
         <section>
             <h1>Effective Solutions <br> for Your Business</h1>
-            <a href="">Order Service</a>
+            <button type="button">Order Service</button>
         </section>
 
         <section>
@@ -57,40 +57,40 @@
         </section>
 
         <section>
-            <h3>What are we doing</h3>
+            <h2>What are we doing</h2>
             <ul>
                 <li>
-                    <img src="/images/img.svg" alt="First app" width="360" height="300">
+                    <img src="/images/img.jpg" alt="First app" width="360" height="300">
                 </li>
                 <li>
-                    <img src="/images/img (1).svg" alt="Second app" width="360" height="300">
+                    <img src="/images/img (1).jpg" alt="Second app" width="360" height="300">
                 </li>
                 <li>
-                    <img src="/images/img (2).svg" alt="Third app" width="360" height="300">
+                    <img src="/images/img (2).jpg" alt="Third app" width="360" height="300">
                 </li>
             </ul>
         </section>
 
         <section>
-            <h3>Our Team</h3>
+            <h2>Our Team</h2>
             <ul>
                 <li>
-                    <img src="/images/img (3).svg" alt="Mark Guerrero">
+                    <img src="/images/img (3).jpg" alt="Mark Guerrero" width="264" height="260">
                     <p>Mark Guerrero</p>
                     <p>Product Designer</p>
                 </li>
                 <li>
-                    <img src="/images/img (4).svg" alt="Tom Ford">
+                    <img src="/images/img (4).jpg" alt="Tom Ford" width="264" height="260">
                     <p>Tom Ford</p>
                     <p>Frontend Developer</p>
                 </li>
                 <li>
-                    <img src="/images/img (5).svg" alt="Camila Garcia">
+                    <img src="/images/img (5).jpg" alt="Camila Garcia" width="264" height="260">
                     <p>Camila Garcia</p>
                     <p>Marketing</p>
                 </li>
                 <li>
-                    <img src="/images/img (6).svg" alt="Daniel Wilson">
+                    <img src="/images/img (6).jpg" alt="Daniel Wilson" width="264" height="260">
                     <p>Daniel Wilson</p>
                     <p>UI Designer</p>
                 </li>
@@ -102,7 +102,8 @@
 
     </main>
     <footer>
-        
+        <img src="/images/Logo.jpg" alt="logotype" width="115" height="22">
+        <p>Increase the flow of customers and <br> sales for your business with digital <br> marketing & growth solutions.</p>
     </footer>
     
 </body>
