--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <img src="/images/Logo.jpg" alt="logotype" width="115" height="24">
+        <a href="/">WebStudio</a>
 
         <nav>
             <ul>
@@ -36,20 +36,20 @@
         <section>
             <ul>
                 <li>
-                    <h2>Strategy</h2>
+                    <h3>Strategy</h3>
                     <p>Our goal is to identify the business
                         problem to walk away with the perfect and creative solution. </p>
                 </li>
                 <li>
-                    <h2>Punctuality</h2>
+                    <h3>Punctuality</h3>
                     <p>Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
                 </li>
                 <li>
-                    <h2>Diligence</h2>
+                    <h3>Diligence</h3>
                     <p>Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
                 </li>
                 <li>
-                    <h2>Technologies</h2>
+                    <h3>Technologies</h3>
                     <p>Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
                 </li>
 
@@ -61,13 +61,13 @@
             <h2>What are we doing</h2>
             <ul>
                 <li>
-                    <img src="/images/img.jpg" alt="First app" width="360" height="300">
+                    <img src="./images/first-app.jpg" alt="First app" width="360" height="300">
                 </li>
                 <li>
-                    <img src="/images/img (1).jpg" alt="Second app" width="360" height="300">
+                    <img src="./images/second-app.jpg" alt="Second app" width="360" height="300">
                 </li>
                 <li>
-                    <img src="/images/img (2).jpg" alt="Third app" width="360" height="300">
+                    <img src="./images/third-app.jpg" alt="Third app" width="360" height="300">
                 </li>
             </ul>
         </section>
@@ -76,22 +76,22 @@
             <h2>Our Team</h2>
             <ul>
                 <li>
-                    <img src="/images/img (3).jpg" alt="Mark Guerrero" width="264" height="260">
+                    <img src="./images/mark-guerrero.jpg" alt="Mark Guerrero" width="264" height="260">
                     <p>Mark Guerrero</p>
                     <p>Product Designer</p>
                 </li>
                 <li>
-                    <img src="/images/img (4).jpg" alt="Tom Ford" width="264" height="260">
+                    <img src="./images/tom-ford.jpg" alt="Tom Ford" width="264" height="260">
                     <p>Tom Ford</p>
                     <p>Frontend Developer</p>
                 </li>
                 <li>
-                    <img src="/images/img (5).jpg" alt="Camila Garcia" width="264" height="260">
+                    <img src="./images/camila-garcia.jpg" alt="Camila Garcia" width="264" height="260">
                     <p>Camila Garcia</p>
                     <p>Marketing</p>
                 </li>
                 <li>
-                    <img src="/images/img (6).jpg" alt="Daniel Wilson" width="264" height="260">
+                    <img src="./images/daniel-wilson.jpg" alt="Daniel Wilson" width="264" height="260">
                     <p>Daniel Wilson</p>
                     <p>UI Designer</p>
                 </li>
@@ -103,7 +103,7 @@
 
     </main>
     <footer>
-        <img src="/images/Logo.jpg" alt="logotype" width="115" height="22">
+        <a href="/">WebStudio</a>
         <p>Increase the flow of customers and <br> sales for your business with digital <br> marketing & growth solutions.</p>
     </footer>
     
